syntax = "proto2";
package ddproto;

//牌 ,单张扑克牌
message common_srv_pokerPai {
    optional int32 id = 1;
    optional string des = 2;
    optional int32 value = 3;
    optional int32 flower = 4;
    optional string name = 5;
}
