syntax = "proto2";

import public "common_client.proto";
package ddproto;
option optimize_for = LITE_RUNTIME;

//房主解散房间(未开局)
message ddz_req_dissolveDesk {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 解散房间的用户 id
}
//解散房间回复
message ddz_ack_dissolveDesk {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 解散房间的用户 id
    optional int32 deskId = 3; //房间Id
    optional string passWord = 4; //房间密钥
}

// 离开房间
message ddz_req_leaveDesk {
    optional ProtoHeader header = 1;
}

//离开房间的回复
message ddz_ack_leaveDesk {
    optional ProtoHeader header = 1;
}

//准备游戏
message ddz_req_ready {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 操作人
    optional bool isShowHandPokers = 3; // 明牌开始游戏（x5倍）
}

//准备游戏的结果
message ddz_ack_ready {
    optional ProtoHeader header = 1;
    optional string msg = 2; //提示信息
    optional uint32 userId = 3; //广播推送时：表示谁已准备
}

//聊天的内容
message ddz_req_message {
    optional ProtoHeader header = 1;
    optional int32 msgType = 2; //消息的类型,1,快捷,2,表情,3,自定义
    optional int32 id = 3; //只有快捷和表情的时候有用
    optional string msg = 4; //自定义的时候使用
    optional uint32 userId = 5; //发消息的人是谁
    optional int32 deskId = 6; //desk的id
}

//消息广播
message ddz_bc_message {
    optional ProtoHeader header = 1;
    optional int32 msgType = 2; //消息的类型,1,快捷,2,表情,3,自定义
    optional int32 id = 3; //只有快捷和表情的时候有用
    optional string msg = 4; //自定义的时候使用
    optional uint32 userId = 5; //发消息的人是谁
}

// 赢牌信息：谁赢了多少
message ddz_base_winCoinInfo {
    optional string nickName = 1;
    optional uint32 userId = 2;
    optional int32 baseValue = 3; // 底分
    optional int64 winCoin = 4; // 本次输赢多少(负数表示输了)
    optional int64 coin = 5; // 输赢以后，当前筹码是多少
    optional bool isDiZhu = 6; //是否地主
    optional int32 rate = 7; // 倍数

    optional string description = 8; // 赢牌描述信息 ( 如:"春天 炸弹x2" )
    optional int32 bomb = 9; //炸弹数量
}

// 本局结果(广播)
message ddz_ba_currentResult {
    optional ProtoHeader header = 1;
    repeated ddz_base_winCoinInfo winCoinInfo = 2; // 本局玩家的输赢明细
}

message ddz_base_endLotteryInfo {
    optional uint32 userId = 1;
    optional string nickName = 2; //玩家姓名
    optional bool bigWin = 3; //是否为大赢家
    optional bool isOwner = 4; //是否房主
    optional int64 winCoin = 5; //总输赢筹码数
    optional int32 maxWinCoin = 6; //单局最高分
    optional int32 countBomb = 7; //炸弹总数
    optional int32 countWin = 8; //赢了几局
    optional int32 countLose = 9; //输了几局
}

// 牌局结束(广播)
message ddz_bc_endLottery {
    optional ProtoHeader header = 1;
    repeated ddz_base_endLotteryInfo coinInfo = 2; //各人的汇总输赢明细
}

